--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
         android:id="@+id/Label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lets Play!"
-        android:textSize="25pt"
-        android:gravity="center"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/madlibs_face"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -24,7 +24,7 @@
         android:gravity="center"
         android:text="Word type"
         android:textSize="10pt"
-        app:layout_constraintBottom_toBottomOf="@id/Label"
+        app:layout_constraintBottom_toTopOf="@id/Label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/WordField"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="OH BOY THIS IS GONNA BE GOOD"
+        android:text="Ready?"
         android:textSize="20pt"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/Label"
@@ -92,6 +92,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EnterButton" />
+
+
+
 
 
 
